Some dummy changes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <title>TrainMate</title>
 </head>
 <body>
-    <header class="bar-nav-">
-        <div>
-            <h1>QUITOS VIRGO</h1>
+    <header>
+        <div class="nav-container">
+            <p>TrainMate</p>
+            <nav class="nav-container__navbar">
+                <a href="#">Sobre Nosotros</a>
+                <a href="#">Iniciar Sesion</a>
+                <a href="#">Registrate</a>
+                <a href="#">Contactanos</a>
+            </nav>
         </div>
     </header>
 </body>
