first index page works

--- a/index.html
+++ b/index.html
@@ -1,49 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-index.css">
     <title>TrainMate</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+    <header>
+        <div class="nav-container">
+            <div class="logo-nav">
+                <p>Train<span>Mate</span></p>
+                <img src="logo2.png" alt="">
+            </div>
+            <nav class="nav-container__navbar">
+                <ul>
+                    <li><a href="#quienes-somos">Sobre Nosotros</a></li>
+                    <li><a href="#iniciar-sesion">Iniciar Sesion</a></li>
+                    <li><a href="#">Registrate</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+            </nav>
         </div>
-      </nav>
     </header>
+    <div class="img-container">
+        <h1>No eres lo que <span> logras</span><br> eres lo que <span> superas</span></h1>
+    </div>
+    <section class="quienes-somos" id="quienes-somos">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam libero minima quasi, excepturi, sequi in
+            quidem dolorem distinctio alias autem id, qui exercitationem totam dolorum ut explicabo. Cum, rem corporis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum vitae, tenetur explicabo in inventore error
+            perferendis repellat adipisci autem cum beatae magni consequatur unde, placeat perspiciatis, tempore animi
+            id iste.
+        
+        </p>
+        <img src="logo2.png" alt="">
+    </section>
+    <div class="iniciar-sesion" id="iniciar-sesion">
+        <form>
+            <h1>Inicio de sesión</h1>
+            <label for="username">Nombre de usuario:</label>
+            <input type="text" id="username" name="username" placeholder="trainmate123" required>
+            <label for="mail">Mail:</label>
+            <input type="email" id="email" name="email" required placeholder="trainmate@gmail.com" >
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" placeholder="At least 8 characters"minlength="8" required>
+            <div id="buttom">    
+                <input type="submit" value="Iniciar sesión">
+            </div>
+          </form>
+    </div>
+
 </body>
+
 </html>
