--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#quienes-somos">Sobre Nosotros</a></li>
                     <li><a href="#iniciar-sesion">Iniciar Sesion</a></li>
                     <li><a href="#">Registrate</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#contactanos">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -53,6 +53,22 @@
             </div>
           </form>
     </div>
+
+    <div class="contactanos" id = "contactanos">
+        <form>
+        <h1> Contacto </h1>
+        
+        <input type="text" name="fullname" placeholder="Full Name" id="fullname">
+        <input type="email" name="email" placeholder="Email" id="email">
+        <input type="text" name="country" placeholder="Country" id="country">
+        <input type="tel" name="phone" placeholder="Phone" id="phone" minlength="10">
+        <input type="text" name="message" placeholder="Message " id="message">
+        <div id="enviar">
+            <input type = "submit" value="Enviar">
+        </div>
+
+    </div>
+</form>
 
 </body>
 
