--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <ul>
                     <li><a href="#quienes-somos">Sobre Nosotros</a></li>
                     <li><a href="#iniciar-sesion">Iniciar Sesion</a></li>
-                    <li><a href="#">Registrate</a></li>
                     <li><a href="#contactanos">Contacto</a></li>
                 </ul>
             </nav>
@@ -40,6 +39,9 @@
         <img src="logo2.png" alt="">
     </section>
     <div class="iniciar-sesion" id="iniciar-sesion">
+        <div class="imagen">
+        <img src = "img.jpeg"></img>
+    </div>
         <form>
             <h1>Inicio de sesión</h1>
             <label for="username">Nombre de usuario:</label>
@@ -48,6 +50,8 @@
             <input type="email" id="email" name="email" required placeholder="trainmate@gmail.com" >
             <label for="password">Contraseña:</label>
             <input type="password" id="password" name="password" placeholder="At least 8 characters"minlength="8" required>
+            <p> No tienes cuenta? <a href="registro.html"> Registrate </a></p>
+            <p> Te olvidaste la contraseña <a href=""> Pulsa aqui</a></p>
             <div id="buttom">    
                 <input type="submit" value="Iniciar sesión">
             </div>
