--- a/index.html
+++ b/index.html
@@ -42,12 +42,9 @@
     <div class="iniciar-sesion" id="iniciar-sesion">
         <form>
             <h1>Inicio de sesión</h1>
-            <label for="username">Nombre de usuario:</label>
-            <input type="text" id="username" name="username" placeholder="trainmate123" required>
-            <label for="mail">Mail:</label>
-            <input type="email" id="email" name="email" required placeholder="trainmate@gmail.com" >
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" placeholder="At least 8 characters"minlength="8" required>
+            <input type="text" id="username" name="username" placeholder="Nombre" required>
+            <input type="email" id="email" name="email" required placeholder="e-mail" >
+            <input type="password" id="password" name="password" placeholder="Constraseña"minlength="8" required>
             <div id="buttom">    
                 <input type="submit" value="Iniciar sesión">
             </div>
@@ -56,20 +53,17 @@
 
     <div class="contactanos" id = "contactanos">
         <form>
-        <h1> Contacto </h1>
-        
-        <input type="text" name="fullname" placeholder="Full Name" id="fullname">
-        <input type="email" name="email" placeholder="Email" id="email">
-        <input type="text" name="country" placeholder="Country" id="country">
-        <input type="tel" name="phone" placeholder="Phone" id="phone" minlength="10">
-        <input type="text" name="message" placeholder="Message " id="message">
-        <div id="enviar">
-            <input type = "submit" value="Enviar">
-        </div>
-
+            <h1> Contacto </h1>
+            <input type="text" name="fullname" placeholder="Full Name" id="fullname">
+            <input type="email" name="email" placeholder="Email" id="email">
+            <input type="text" name="country" placeholder="Country" id="country">
+            <input type="tel" name="phone" placeholder="Phone" id="phone" minlength="10">
+            <input type="text" name="message" placeholder="Message " id="message">
+            <div id="enviar">
+                <input type = "submit" value="Enviar">
+            </div>
+        </form>
     </div>
-</form>
-
 </body>
 
 </html>
