--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </form>
         <img src="Imagenes/logo3.png" alt="">
         <div class="iconos-redes-sociales">
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-envelope"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.google.com/intl/es-419/gmail/about/"><i class="fa fa-envelope"></i></a>
+            <a href="https://es-la.facebook.com/"><i class="fa fa-facebook"></i></a>
         </div>
     </div>
 
