--- a/registro.html
+++ b/registro.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<img src="logo2.png" alt="Logo de Trainmate">
+		<img src="Imagenes/logo2.png" alt="Logo de Trainmate">
 		<h1>Trainmate</h1>
 	</header>
 
