--- a/index.html
+++ b/index.html
@@ -60,15 +60,16 @@
     <div class="contactanos" id = "contactanos">
         <form>
         <h1> Contacto </h1>
-            <input type="text" name="fullname" placeholder="Full Name" id="fullname">
-            <input type="email" name="email" placeholder="Email" id="email">
-            <input type="text" name="country" placeholder="Country" id="country">
-            <input type="tel" name="phone" placeholder="Phone" id="phone" minlength="10">
-            <textarea type="text" name="message" placeholder="Message " id="message"></textarea>
+            <input type="text" name="fullname" placeholder="Full Name" id="fullname" required>
+            <input type="email" name="email" placeholder="Email" id="email" required>
+            <input type="text" name="country" placeholder="Country" id="country" required>
+            <input type="tel" name="phone" placeholder="Phone" id="phone" minlength="10" required>
+            <textarea type="text" name="message" placeholder="Message " id="message"></textarea required>
             <div id="enviar">
-                <input type = "submit" id = "buttom-contactarnos" value="Enviar">
+                <input type = "submit" id = "buttom-contactarnos" value="Enviar" >
             </div>
-        </form>
+           
+        </form> 
         <img src="Imagenes/logo3.png" alt="">
         <div class="iconos-redes-sociales">
             <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
